[package]
name = "haici"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
regex = { version = "1.6.0", features = ["std", "unicode-perl"], default-features = false }
reqwest = { version = "0.11.12", features = ["rustls", "blocking"], default-features = false }
scraper = "0.13.0"
