[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = {version = "3.0.9", features = ["derive"] }
colored = "2.0.0" # 命令终端多彩显示
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.16" # 处理 mime 类型
reqwest = { version = "0.11.9", features = ["json"] } # HTTP 客户端
syntect = "4.6.0"
tokio = { version = "1.15.0", features = ["full"] } # 异步处理库
