[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = { version = "0.5.3", features = ["multipart"] }
base64 = "0.13.0"
clap = { version = "3.1.12", features = ["derive"] }
hyper = { version = "0.14.18", features = ["server", "tcp", "http1", "stream"] }
local-ip-address = "0.4.6"
mime = "0.3.16"
mime_guess = "2.0.4"
percent-encoding = "2.1.0"
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace", "fs"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
