[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52" # 错误处理
axum = "0.4.4" # web 服务器
base64 = "0.13.0" # base64 编码/解码
bytes = "1.1.0" # 处理字节流
image = "0.23.14" # 处理图片
lazy_static = "1.4.0" # 通过宏更方便地初始化静态变量
lru = "0.7.2" # LRU 缓存
percent-encoding = "2.1.0" # url 编码/解码
photon-rs = "0.3.1" # 图片效果
prost = "0.9.0" # protobuf 处理
reqwest = "0.11.9" # HTTP client
serde = { version = "1.0.133", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1.15.0", features = ["full"] } # 异步处理
# 服务处理及中间件
tower = { version = "0.4.11", features = ["util", "timeout", "load-shed", "limit"] }
# http 中间件
tower-http = { version = "0.2.0", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.29" # 日志和追踪
tracing-subscriber = "0.3.6" # 日志和追踪

[build-dependencies]
prost-build = "0.9.0" # 编译 protobuf
