[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
axum = "0.4.4"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.23.14"
lazy_static = "1.4.0"
lru = "0.7.2"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.9.0"
reqwest = "0.11.9"
serde = { version = "1.0.134", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1.15.0", features = ["full"] } # 异步处理
# 服务处理及中间件
tower = { version = "0.4.11", features = ["util", "timeout", "load-shed", "limit"] }
# http 中间件
tower-http = { version = "0.2.0", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[build-dependencies]
prost-build = "0.9.0"
